<resources>
    <string name="app_name">药神</string>
    <string name="title_intel">主页</string>
    <string name="title_home">药神</string>
    <string name="title_collage">大学</string>
    <string name="title_chat">消息</string>
    <string name="title_me">我的</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="app_privacy">
        \# 用户协议

尊敬的用户，欢迎使用由**MedicineGod药神**（下列简称为"**药神**"）提供的服务。在使用前请您阅读如下服务协议，使用本应用即表示您默认同意接受本协议，本协议产生法律效力，特别涉及免除或者限制中其责任的条款，请仔细阅读。如有任何问题，可向我方客服、邮件咨询。

## 一、服务条款的确认和接受

通过访问或使用本应用，表示用户同意接受本协议的所有条件和条款。

## 二、服务条款的变更和修改

药神有权在必要时修改服务条款，服务条款一旦发生变更，将会在**更新页面**中提示修改内容。如果不同意所改动的内容，用户可以放弃获得的本应用的信息服务。如果用户继续享用本应用的信息服务，则视为接受服务条款的变更。本应用保留随时修改或中断服务而不需要通知用户的权利。本应用行使修改或中断服务的权利，不需对用户或第三方负责。

## 三、用户行为

### 1. 用户账号、密码和安全

您无需注册登录账号即可使用药神产品除`云端存储`、`好友共享`、`家庭群组`、`校园共享`等线上功能。若您需使用上述等功能，请注册药神账号后使用

### 2. 账号注册时的禁止行为

（1）请勿以党和国家领导人或其他社会名人的真实姓名、字号、艺名、笔名注册；

（2）冒充任何人或机构，或以虚伪不实的方式谎称或使人误认为与任何人或任何机构有关的名称；

（3）请勿注册和其他网友现实名字相近、相仿、侮辱人格等不合规的名字；

（4）请勿注册不文明、不健康名字，或包含歧视、侮辱、猥亵类词语的名字；

（5）请勿注册易产生歧义、引起他人误解的名字；

### 3. 用户在本应用上不得存储、发布下列违法信息和照片：

（1）反对宪法所确定的基本原则的；

（2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；

（3）损害国家荣誉和利益的；

（4）煽动民族仇恨、民族歧视，破坏民族团结的；

（5）破坏国家宗教政策，宣扬邪教和封建迷信的；

（6）散布谣言，扰乱社会秩序，破坏社会稳定的；

（7）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；

（8）侮辱或者诽谤他人，侵害他人合法权益的；

（9）含有法律、行政法规禁止的其他内容的；

（10）禁止骚扰、毁谤、威胁、仿冒网站其他用户；

（11）严禁煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；

（12）严禁发布可能会妨害第三方权益的文件或者信息，例如（包括但不限于）：病毒代码、黑客程序、软件破解注册信息。

（13）禁止上传他人作品。其中包括你从互联网上下载、截图或收集的他人的作品；

（14）禁止上传广告、横幅、标志等网络图片；

### 4. 服务内容

本服务的具体内容由用户根据实际情况上传到**药神APP**中，进行可视化管理药品等的一系列化操作，药神可以对其提供的服务予以变更，且药神提供的服务内容可能随时变更。该软件属于免费应用，用户使用过程中，本软件不会以任何方式、名义收取任何费用。

### 5.  账号封禁

用户存在违规，进行封禁，如果误判，请联系客服协助

### 6. 账号注销、数据清除

如有需要，请联系客服协助。

## 四、隐私条款

### 1.用户信息公开情况说明

尊重用户个人隐私是药神的一项基本政策。所以，药神不会在未经合法用户授权时公开、编辑或透露其注册资料及保存在本应用中的非公开内容，除非有下列情况：

（1）有关法律规定或中其合法服务程序规定；

（2）在紧急情况下，为维护用户及公众的权益；

（3）为维护中其的商标权、专利权及其他任何合法权益；

（4）其他需要公开、编辑或透露个人信息的情况；

### 2.隐私权政策适用范围

（1）用户在使用本应用服务器时留下的个人身份信息；

（2）用户通过本应用服务器与其他用户或非用户之间传送的各种信息；

（3）药神软件十分注重保护用户的个人隐私，并制定了《隐私政策》，用户亦可以通过《隐私政策》，用户确认并同意使用药神软件提供的服务将被视为接受《隐私政策》。

### 3.资讯公开与共享

药神不会将用户的个人信息和资讯故意透露、出租或出售给任何第三方。但以下情况除外：

（1）用户本人同意;

（2）根据法律法规或行政命令的要求提供;

（3）用户违反了本应用服务条款或任何其他产品及服务的使用规定;

（4）经本站评估，用户的帐户存在风险，需要加以保护。
    </string>
</resources>