<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_intel_title"
        android:icon="@drawable/ic_intel_black_24dp"
        android:title="@string/title_intel" />
    <item
        android:id="@+id/navigation_home_title"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_collage_title"
        android:icon="@drawable/ic_collage_black_24dp"
        android:title="@string/title_collage" />
    <item
        android:id="@+id/navigation_community_title"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_me_title"
        android:icon="@drawable/ic_me_black_24dp"
        android:title="@string/title_me" />

</menu>